--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "rxjs": "~6.5.4",
     "sweetalert2": "^8.19.0",
     "tslib": "^1.10.0",
+    "xlsx": "^0.14.2",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
