--- a/angular.json
+++ b/angular.json
@@ -31,6 +31,9 @@
               "src/assets/css/style.css",
               "src/assets/css/bootstrap.min.css",
               "src/assets/css/custom.css",
+              "node_modules/primeicons/primeicons.css",
+              "node_modules/primeng/resources/themes/saga-blue/theme.css",
+              "node_modules/primeng/resources/primeng.min.css",
               "node_modules/font-awesome/css/font-awesome.css",
               "node_modules/font-awesome/css/font-awesome.min.css"
             ],
