--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~9.0.3",
+    "@angular/cdk": "^11.1.1",
     "@angular/common": "~9.0.3",
     "@angular/compiler": "~9.0.3",
     "@angular/core": "~9.0.3",
@@ -23,6 +24,7 @@
     "angular2-flash-messages": "^3.0.1",
     "file-saver": "^2.0.5",
     "font-awesome": "^4.7.0",
+    "ng-image-fullscreen-view": "^2.0.0",
     "ngx-spinner": "^10.0.1",
     "ngx-ui-loader": "^10.0.0",
     "primeicons": "^4.1.0",
