--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "file-saver": "^2.0.5",
     "font-awesome": "^4.7.0",
     "ng-image-fullscreen-view": "^2.0.0",
+    "ngx-paypal": "^7.0.0",
     "ngx-spinner": "^10.0.1",
     "ngx-ui-loader": "^10.0.0",
     "primeicons": "^4.1.0",
